<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yed.adamdjigbe.epialert.MainActivity"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:layout_weight="0.5"
                android:textSize="@dimen/lbl_form_textSize"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="ex: 00 00 00 00"
                android:ems="10"
                android:id="@+id/txtphoneNo"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/lbl_form_textSize" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/spinnerDistrict"
                android:entries="@array/districts_arrays"
                android:prompt="@string/prompt" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/aire"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/lbl_form_textSize" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/spinnerAire" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_weight="0.5"
                android:textSize="@dimen/lbl_form_textSize"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/date_hint"
                android:ems="10"
                android:id="@+id/txtdate"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="false"
                 />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_cas"
                android:layout_weight="0.5"
                android:textSize="@dimen/lbl_form_textSize"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="ex: Kouassi Yao"
                android:ems="10"
                android:id="@+id/txtnomCas"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:layout_weight="0.5"
                android:textSize="@dimen/lbl_form_textSize"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="ex: 12"
                android:ems="10"
                android:id="@+id/txtAge"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexe"
                android:layout_weight="0.5"
                android:textSize="@dimen/lbl_form_textSize"
                android:layout_gravity="center_vertical" />

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abr_homme"
                    android:id="@+id/rbHomme"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abr_femme"
                    android:id="@+id/rbFemme"
                    android:layout_weight="0.5" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signe"
                android:layout_weight="0.5"
                android:textSize="@dimen/lbl_form_textSize"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/spinnerSigne"
                android:entries="@array/signes_arrays"
                android:prompt="@string/prompt" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/ll_hor_form_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/annuler"
                android:id="@+id/btnAnnuler"
                android:layout_weight="0.5"
                android:padding="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:id="@+id/btnValider"
                android:layout_weight="0.5"
                android:padding="5dp" />
        </LinearLayout>


    </LinearLayout>

</android.widget.ScrollView>